# zchunk

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  DOCKER_TESTING.md  Jenkinsfile  LICENSE  README.md  meson.build  meson_options.txt  prep-Jenkinsfile  zchunk_format.txt
src/: memmem.c  memmem.h  meson.build  unzck.c  util_common.c  util_common.h  zck.c  zck_delta_size.c  zck_dl.c  zck_gen_zdict.c  zck_read_header.c
src/buzhash/: LICENSE  buzhash.c  buzhash.h
src/lib/: compint.c  error.c  header.c  io.c  log.c  meson.build  zck.c  zck_private.h
src/lib/buzhash/: buzhash.c  buzhash.h  meson.build
src/lib/comp/: comp.c  meson.build
src/lib/comp/nocomp/: meson.build  nocomp.c  nocomp.h
src/lib/comp/zstd/: meson.build  zstd.c  zstd.h
src/lib/dl/: dl.c  meson.build  multipart.c  range.c
src/lib/hash/: hash.c  meson.build
src/lib/hash/bundled/: libsha.c  libsha.h  meson.build
src/lib/hash/bundled/sha1/: meson.build  sha1.h
src/lib/hash/openssl/: meson.build  openssl.c  openssl.h
src/lib/hash/sha1/: meson.build  sha1.c
src/lib/hash/sha2/: meson.build  sha2.c  sha2.h
src/lib/index/: index_common.c  index_create.c  index_read.c  meson.build
src/lib/win32/: basename.c  ftruncate.c  regcomp.c  regex.h  regexec.c  tre-mem.c  unistd.h
test/: abi.sh  copy_chunks.c  empty.c  exitcodecheck.c  invalid_input_checksum.c  meson.build  new_abi.sh  optelems.c  optflag.c  read_single_chunk.c  read_single_comp_chunk.c  shacheck.c  shacheck.sh  zck_cmp_uncomp.c
test/abi/stable/: libzck.so.0.0.1  libzck.so.0.7.4  libzck.so.0.7.5  libzck.so.0.7.6  libzck.so.0.9.0  libzck.so.0.9.1  libzck.so.0.9.10  libzck.so.0.9.11  libzck.so.0.9.12  libzck.so.0.9.14  libzck.so.0.9.15  libzck.so.0.9.16  libzck.so.0.9.2  libzck.so.0.9.3  libzck.so.0.9.5  libzck.so.0.9.6  libzck.so.0.9.7  libzck.so.0.9.8  libzck.so.0.9.9  libzck.so.1.0.0  libzck.so.1.0.1  libzck.so.1.0.2  libzck.so.1.0.3  libzck.so.1.0.4  libzck.so.1.1.0  libzck.so.1.1.1  libzck.so.1.1.10  libzck.so.1.1.12  libzck.so.1.1.13  libzck.so.1.1.15  libzck.so.1.1.16  libzck.so.1.1.2  libzck.so.1.1.3  libzck.so.1.1.4  libzck.so.1.1.5  libzck.so.1.1.6  libzck.so.1.1.7  libzck.so.1.1.8  libzck.so.1.1.9  libzck.so.1.2.0  (+11 more)
test/compat_reports/zchunk/0.6.2_to_0.6.3/: compat_report.html
test/compat_reports/zchunk/0.6.3_to_0.7.0/: compat_report.html
test/compat_reports/zchunk/0.7.0_to_0.7.1/: compat_report.html
test/compat_reports/zchunk/0.7.1_to_0.7.2/: compat_report.html
test/compat_reports/zchunk/0.7.2_to_0.7.3/: compat_report.html
test/compat_reports/zchunk/0.7.3_to_0.7.4/: compat_report.html
test/compat_reports/zchunk/0.7.4_to_0.7.5/: compat_report.html
test/compat_reports/zchunk/0.7.5_to_0.7.6/: compat_report.html
test/compat_reports/zchunk/0.7.6_to_0.9.0/: compat_report.html
test/compat_reports/zchunk/0.9.0_to_0.9.1/: compat_report.html
test/compat_reports/zchunk/0.9.10_to_0.9.11/: compat_report.html
test/compat_reports/zchunk/0.9.11_to_0.9.12/: compat_report.html
test/compat_reports/zchunk/0.9.12_to_0.9.13/: compat_report.html
test/compat_reports/zchunk/0.9.13_to_0.9.14/: compat_report.html
test/compat_reports/zchunk/0.9.14_to_0.9.15/: compat_report.html
test/compat_reports/zchunk/0.9.15_to_0.9.16/: compat_report.html
test/compat_reports/zchunk/0.9.16_to_0.9.17/: compat_report.html
test/compat_reports/zchunk/0.9.17_to_1.0.0/: compat_report.html
test/compat_reports/zchunk/0.9.1_to_0.9.1/: compat_report.html
test/compat_reports/zchunk/0.9.1_to_0.9.2/: compat_report.html
test/compat_reports/zchunk/0.9.2_to_0.9.3/: compat_report.html
test/compat_reports/zchunk/0.9.3_to_0.9.4/: compat_report.html
test/compat_reports/zchunk/0.9.5_to_0.9.5/: compat_report.html
test/compat_reports/zchunk/0.9.5_to_0.9.6/: compat_report.html
test/compat_reports/zchunk/0.9.6_to_0.9.7/: compat_report.html
test/compat_reports/zchunk/0.9.7_to_0.9.8/: compat_report.html
test/compat_reports/zchunk/0.9.8_to_0.9.9/: compat_report.html
test/compat_reports/zchunk/0.9.9_to_0.9.10/: compat_report.html
test/compat_reports/zchunk/1.0.0_to_1.0.1/: compat_report.html
test/compat_reports/zchunk/1.0.1_to_1.0.2/: compat_report.html
test/compat_reports/zchunk/1.0.2_to_1.0.3/: compat_report.html
test/compat_reports/zchunk/1.0.3_to_1.0.4/: compat_report.html
test/compat_reports/zchunk/1.0.4_to_1.1.0/: compat_report.html
test/compat_reports/zchunk/1.1.0_to_1.1.1/: compat_report.html
test/compat_reports/zchunk/1.1.10_to_1.1.11/: compat_report.html
test/compat_reports/zchunk/1.1.11_to_1.1.12/: compat_report.html
test/compat_reports/zchunk/1.1.12_to_1.1.13/: compat_report.html
test/compat_reports/zchunk/1.1.13_to_1.1.14/: compat_report.html
test/compat_reports/zchunk/1.1.14_to_1.1.15/: compat_report.html
test/compat_reports/zchunk/1.1.15_to_1.1.16/: compat_report.html
test/compat_reports/zchunk/1.1.16_to_1.2.0/: compat_report.html
test/compat_reports/zchunk/1.1.1_to_1.1.2/: compat_report.html
test/compat_reports/zchunk/1.1.2_to_1.1.3/: compat_report.html
test/compat_reports/zchunk/1.1.3_to_1.1.4/: compat_report.html
test/compat_reports/zchunk/1.1.4_to_1.1.5/: compat_report.html
test/compat_reports/zchunk/1.1.5_to_1.1.6/: compat_report.html
test/compat_reports/zchunk/1.1.6_to_1.1.7/: compat_report.html
test/compat_reports/zchunk/1.1.7_to_1.1.8/: compat_report.html
test/compat_reports/zchunk/1.1.8_to_1.1.9/: compat_report.html
test/compat_reports/zchunk/1.1.9_to_1.1.10/: compat_report.html
test/compat_reports/zchunk/1.2.0_to_1.2.1/: compat_report.html
test/compat_reports/zchunk/1.2.1_to_1.2.2/: compat_report.html
test/files/: LICENSE.dict  LICENSE.dict.fodt.zck  LICENSE.header.new.nodict.fodt.zck  LICENSE.manual.dict.fodt.zck  LICENSE.manual.nodict.fodt.zck  LICENSE.nocomp.fodt.zck  LICENSE.nodict.fodt.zck  compressed_int_too_large1.zck  compressed_int_too_large2.zck  compressed_int_too_large3.zck  compressed_int_too_large4.zck  compressed_int_too_large5.zck  empty.optelems.zck  empty.optflags.zck  integer_overflow_header.zck
test/lib/: meson.build  util.c  util.h
(+79 files in other folders)
